--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ html,
 body,
 :global(#__next) {
   height: 100%;
+  min-width: 480px;
 }
 
 a,
